--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -12,8 +12,7 @@
     "alarms",
     "tabs",
     "scripting",
-    "webRequest",
-    "BrowseData"
+    "webRequest"
   ],
   "host_permissions": [
     "<all_urls>",
